--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div id="root">
-        
+        <div></div>
     </div>
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
